# ComfyUI_LiteLLM

./: .env.example  .gitignore  ENVIRONMENT.md  ENVIRONMENT_SAFETY_SUMMARY.md  SECURITY_FIX_SUMMARY.md  __init__.py  config.py  config.yaml  install.py  litellm_uuid.txt  litellmnodes.py  pyproject.toml  readme.md  repo_id.txt  requirements.txt  run_tests.py  utils.py
Agents/: nodes.py
LightRAG/: __init__.py  agent_memory.py  lightrag_nodes.py
agents/: EXAMPLES.md  USAGE_GUIDE.md  __init__.py  base.py  nodes.py
comfyui_lightrag/: README.md  lightrag_nodes.py
js/: genericLiteGraphTextNode.js  htmlRenderer.js
lightrag/: agent_memory.py  lightrag_base.py  lightrag_nodes.py
tests/: README.md  __init__.py  conftest.py  smoke_test.py  test_agent.py  test_agent_cache.py  test_agent_structure.py  test_completionv2.py  test_custom_endpoint.py  test_custom_endpoint_real.py  test_embedding_override.py  test_hash_utils.py  test_kluster_real.py  test_lightrag_incremental_documents.py  test_lightrag_integration.py  test_litellm_model_provider_adv.py  test_litellmnodes.py  test_local_embeddings.py  test_minimal_real.py  test_simple_real.py
tests/_stubs/PIL/: Image.py  __init__.py
tests/_stubs/litellm/: __init__.py
tests/_stubs/markdown/: __init__.py
tests/_stubs/numpy/: __init__.py
tests/_stubs/pydantic/: __init__.py
tests/_stubs/torch/: __init__.py
tests/_stubs/yaml/: __init__.py
utils/: __init__.py  custom_dict.py  env_config.py  hash_utils.py  utils.py
